--- a/dev/css_dev/utils/_variables.scss
+++ b/dev/css_dev/utils/_variables.scss
@@ -61,33 +61,29 @@ $img_url:'../../images/';
 //motion
 $slide_time:300;
 
-$font-6r:0.6rem;
-$font-7r:0.7rem;
-$font-8r:0.8rem;
-$font-9r:0.9rem;
-$font-1r:1rem;
-$font-11r:1.1rem;
-$font-12r:1.2rem;
-$font-12r:1.2rem;
-$font-13r:1.3rem;
-$font-14r:1.4rem;
-$font-15r:1.5rem;
-$font-16r:1.6rem;
-$font-17r:1.7rem;
-$font-18r:1.8rem;
-$font-19r:1.9rem;
-$font-20r:2rem;
-$font-22r:2.2rem;
-$font-24r:2.4rem;
-$font-26r:2.6rem;
-$font-28r:2.8rem;
-$font-30r:3rem;
-$font-32r:3.2rem;
-$font-34r:3.4rem;
-$font-36r:3.6rem;
-$font-40r:4rem;
-$font-46r:4.6rem;
-$font-48r:4.8rem;
-$font-50r:5rem;
-$font-52r:5.2rem;
-$font-60r:6rem;
+$font-10r:10px;
+$font-11r:11px;
+$font-12r:12px;
+$font-12r:12px;
+$font-13r:13px;
+$font-14r:14px;
+$font-15r:15px;
+$font-16r:16px;
+$font-17r:17px;
+$font-18r:18px;
+$font-19r:19px;
+$font-20r:20px;
+$font-22r:22px;
+$font-24r:24px;
+$font-26r:26px;
+$font-28r:28px;
+$font-30r:30px;
+$font-32r:32px;
+$font-34r:34px;
+$font-36r:36px;
+$font-40r:40px;
+$font-46r:46px;
+$font-48r:48px;
+$font-50r:50px;
+$font-52r:52px;
+$font-60r:60px;
