--- a/assets/css/display.css
+++ b/assets/css/display.css
@@ -26,11 +26,11 @@ img { vertical-align: top; }
 /* ========================================================== */
 /* ---------------------------------------------------------- */
 /* Inter s =========================================== */
-@font-face { font-family: 'Inter'; src: url("../fonts/Inter-Regular.woff") format("woff"), url("../fonts/Inter-Regular.eot?#iefix") format("eot"), url("../fonts/Inter-Regular.ttf") format("truetype"); font-weight: 400; font-style: normal; }
+@font-face { font-family: 'Inter'; src: url("../fonts/Inter-Regular.woff2") format("woff2"), url("../fonts/Inter-Regular.woff") format("woff"), url("../fonts/Inter-Regular.eot") format("eot"), url("../fonts/Inter-Regular.otf") format("otf"), url("../fonts/Inter-Regular.ttf") format("truetype"); font-weight: 400; font-style: normal; }
 
-@font-face { font-family: 'Inter'; src: url("../fonts/Inter-SemiBold.woff") format("woff"), url("../fonts/Inter-SemiBold.eot?#iefix") format("eot"), url("../fonts/Inter-SemiBold.ttf") format("truetype"); font-weight: 600; font-style: normal; }
+@font-face { font-family: 'Inter'; src: url("../fonts/Inter-SemiBold.woff2") format("woff2"), url("../fonts/Inter-SemiBold.woff") format("woff"), url("../fonts/Inter-SemiBold.eot") format("eot"), url("../fonts/Inter-SemiBold.otf") format("otf"), url("../fonts/Inter-SemiBold.ttf") format("truetype"); font-weight: 600; font-style: normal; }
 
-@font-face { font-family: 'Inter'; src: url("../fonts/Inter-Bold.woff") format("woff"), url("../fonts/Inter-Bold.eot?#iefix") format("eot"), url("../fonts/Inter-Bold.ttf") format("truetype"); font-weight: 700; font-style: normal; }
+@font-face { font-family: 'Inter'; src: url("../fonts/Inter-Bold.woff2") format("woff2"), url("../fonts/Inter-Bold.woff") format("woff"), url("../fonts/Inter-Bold.eot") format("eot"), url("../fonts/Inter-Bold.otf") format("otf"), url("../fonts/Inter-Bold.ttf") format("truetype"); font-weight: 700; font-style: normal; }
 
 /* Inter e ======================================= */
 /* ---------------------------------------------------------- */
