--- a/dev/css_dev/layout/_footer.scss
+++ b/dev/css_dev/layout/_footer.scss
@@ -7,5 +7,27 @@
 /* ---------------------------------------------------------- */
 /* footer s ================================================= */
 
+// footer_sponsors
+.footer_sponsors {
+    color: #fff;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 72px 72px;
+    background-color: $prime_color;
+    text-align: center;
+    .logoipsum {
+        margin-top: 64px;
+        font-size: 0;
+        img {
+            margin-right: 83px;
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+    }
+}
+
+
+
 /* footer e ================================================= */
 /* ---------------------------------------------------------- */
