--- a/dev/css_dev/display_kim.scss
+++ b/dev/css_dev/display_kim.scss
@@ -1,31 +1,5 @@
 @charset "utf-8";
 
 @import
-	'utils/variables.scss',
-	'utils/css3-mixins.scss',
-	'utils/mixin.scss';
-
-@import
-	'base/reset.scss',
-	'base/font.scss',
-	'base/normalize_v8.0.1.scss',
-	'base/normalize_kor_v3.0.3.scss',
-	'base/base.scss';
-
-@import
-	'layout/container.scss',
-	'layout/popup.scss';
-
-@import
-	'display/button.scss',
-	'display/form.scss',
-	'display/table.scss',
-	'display/list.scss',
-	'display/tab.scss',
-	'display/thumbnail.scss';
-
-@import
-	'pages/main.scss';
-
-@import
-'pages/kim.scss';
+	'pages/main.scss',
+  'pages/kim.scss';
