--- a/assets/css/display.css
+++ b/assets/css/display.css
@@ -273,9 +273,13 @@ td, th { padding: 0; }
 /* ========================================================== */
 /* ---------------------------------------------------------- */
 /* base s =================================================== */
-html, body { width: 100%; height: 100%; box-sizing: border-box; }
+html, body { width: 100%; height: 100%; box-sizing: border-box; background: var(--background); }
 
 body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; color: #000; }
+
+:root[color-theme='light'] { --background: #fff; --fontColor: #1f1f1fea; }
+
+:root[color-theme='dark'] { --background: #1f1f1fea; --fontColor: #fff; }
 
 .container { max-width: 1440px; margin: 0 auto; }
 
